# wasm-test

./: index.html
hello-wasm/: Cargo.toml
hello-wasm/pkg/: hello_wasm.d.ts  hello_wasm.js  hello_wasm_bg.wasm  hello_wasm_bg.wasm.d.ts  package.json
hello-wasm/src/: lib.rs
